cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED 11)
set(PROJECT_NAME "saving_space")
set(PROJECT_VERSION 1.0.0)
project(${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES CXX)
set(CMAKE_MODULE_PATH ${saving_space_SOURCE_DIR}/build ${CMAKE_MODULE_PATH})
add_library(${PROJECT_NAME} SHARED
        "src/hash-map.hpp"
        "src/hash-map.cpp"
        "src/hasher.hpp"
        "src/hasher.cpp"
        "src/space-saving.hpp"
        "src/space-saving.cpp"
        "src/runner.cpp"
        )
set_target_properties(${PROJECT_NAME} PROPERTIES
        VERSION ${PROJECT_VERSION}
        FRAMEWORK TRUE
        SOVERSION 1
        LINKER_LANGUAGE CXX)
include(GNUInstallDirs)
install(TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
